# bevy-officespace

./: .gitignore  Cargo.toml  Makefile  README.md  bevy_game.js
.github/workflows/: release.yaml
assets/: box.blend  building.gltf  paperman.gltf
src/: camera.rs  lib.rs  loader.rs  main.rs  navmesh.rs  player.rs  render.rs  states.rs
src/common/: loader.rs  mod.rs  navmesh.rs  track.rs
src/game/: camera.rs  mod.rs  render.rs  states.rs
src/game/assets/: building.rs  mod.rs  paperbox.rs  paperman.rs
src/game/building/: mod.rs
src/game/paperbox/: mod.rs
src/game/paperman/: animation.rs  controller.rs  mod.rs
