[package]
name = "bevy_officespace"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "bevy_officespace"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["animation", "jpeg"] }
bevy_flycam = "0.12"
anyhow = "1.0"
thiserror = "1.0"
bevy-inspector-egui = "0.21.0"

# cargo build / cargo build --release --no-default-features
[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]